@@ -38,7 +38,7 @@ var pathtobook = "<?php print $CFG->sitepath.'/'.$CFG->applicationdirectory.'/'.
 </script>
 <script language="JavaScript" type="text/javascript" src="js/printing.js?version=920"></script>
 <script language="JavaScript" type="text/javascript" src="js/qtip.js"></script>
-<script language="JavaScript" type="text/javascript" src="js/bookfunctions.js?version=928"></script> 
+<script language="JavaScript" type="text/javascript" src="js/bookfunctions.js?version=929"></script> 
 <script language="JavaScript" type="text/javascript" src="js/register.js"></script>
 <script language="JavaScript" type="text/javascript" src="lib/tiny_mce/tiny_mce.js"></script>
 <script language="JavaScript" type="text/javascript" src="lib/jscalendar/calendar.js"></script>
